# toolium-examples

./: .gitignore  Makefile  README.md  README.rst  nose2.cfg  pip.ini  properties.cfg  pyproject.toml  requirements.txt  requirements_dev.txt  sonar-project.properties
.github/workflows/: ci.yml  playwright-tests.yml
android/: test_cases.py
android/conf/: android-hybrid-properties.cfg  android-properties.cfg  properties.cfg
android/pageobjects/: tabs.py
android/tests/: test_android.py  test_android_gestures.py  test_android_hybrid.py  (+3 more)
android_behave/: environment.py
android_nose2/: test_cases.py
conf/: android-hybrid-properties.cfg  android-properties.cfg  android-web-properties.cfg  ios-hybrid-properties.cfg  ios-properties.cfg  ios-web-properties.cfg  logging.conf  properties.cfg
examples/: test_android_ebookstore.py  test_android_gestures.py  test_appium_android.py  test_appium_android_gestures.py  test_appium_ios.py  test_appium_selendroid.py  test_register_user.py  test_requests_api.py  test_selenium_web.py  test_selenium_web_datadriven.py
ios_behave/: environment.py
ios_nose2/: test_cases.py
mobile_behave/: environment.py
pageobjects/: __init__.py  register.py  register_result.py
resources/: OpenShopIo.rst
selenium_python/: __init__.py  config.py  jira.py  selenium_wrapper.py  test_cases.py
tests/: register_user.py  test_login.py  test_register_user.py
toolium_examples/: test_cases.py
toolium_template/: test_cases.py
web/: test_cases.py
web_behave/: environment.py
web_nose2/: test_cases.py
web_playwright_behave/: environment.py
(+187 files in other folders)
