[project]
name = "toolium-examples"
dynamic = ["dependencies"]
authors = [
    {name = "Rubén González Alonso", email = "ruben.gonzalezalonso@telefonica.com"},
]
description = "Set of examples to learn how to use toolium"
readme = "README.rst"
license = {text = "Apache 2.0"}
requires-python = ">=3.10"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# Rules to enforce
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "G",   # flake8-logging-format
    "ARG", # flake8-unused-arguments
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
    "T20", # flake8-print
    "RUF", # Ruff-specific rules
]
# Rules to ignore
ignore = [
    "COM812",  # flake8-missing-trailing-comas (conflict with ruff format)
]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true
known-first-party = ["acceptance"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
